[package]
name    = "stellar"
version = "0.1.0"
edition = "2021"
authors = ["Kristina Diane Aviles"]
description = "Restricted-spend PWD benefit wallet on Stellar — government funds spendable only at whitelisted hospitals and pharmacies."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.0.0" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level     = "z"      # Minimise Wasm binary size
overflow-checks = true   # Keep arithmetic safety in release
debug         = false
strip         = "symbols"
lto           = true
codegen-units = 1
panic         = "abort"  # Required for no_std Wasm targets

[profile.release-with-logs]
inherits = "release"
debug    = true